# BoltzmannFluids

./: .gitignore  CMakeLists.txt  README.md  build_here_vs2022.bat  build_seperate_directory_vs2022.bat
BoltzmannFluids/Source/Application/: ProgramSourcePaths.cpp  ProgramSourcePaths.h
BoltzmannFluids/Source/Demos/: LBMDemo2D.cpp  LBMDemo2D.h  LBMDemo3D.cpp
BoltzmannFluids/Source/GLSL/LBM/: add_random_population.comp  collide.comp  collide_with_precomputed_velocity.comp  copy_population.comp  set_equilibrium_populations.comp  set_equilibrium_populations_thermal.comp  set_population.comp  stream.comp  stream_thermal.comp
BoltzmannFluids/Source/GLSL/MeshRasterizer3D/: copy_to_3d.comp  raster_unifier.comp  rasterizer.frag
BoltzmannFluids/Source/GLSL/Renderer3D/: basic.vert  density_volumetric.frag  forces_volumetric.frag  temperature_volumetric.frag  velocity_volumetric.frag
BoltzmannFluids/Source/LBM/: LBM.cpp  LBM.h
BoltzmannFluids/Source/LBMConstants/: FloatingPointAccuracy.cpp  FloatingPointAccuracy.h  VelocitySet.h
BoltzmannFluids/Source/Logs/: Logs.h
BoltzmannFluids/Source/MarchingCubes/: MarchingCubes.cpp
BoltzmannFluids/Source/MeshRasterizer3D/: MeshRasterizer3D.cpp  MeshRasterizer3D.h
BoltzmannFluids/Source/Rendering/: CameraController.h
BoltzmannFluids_Standalone/Mains/: main.cpp
BoltzmannFluids_Standalone/Source/: Viewport3D.cpp  Viewport3D.h  application.cpp  application.h  main.cpp  programsourcepaths.cpp  simulationcontroller.cpp  simulationcontroller.h
BoltzmannFluids_UI/: AddItemsBox.cpp  AddItemsBox.h  CollabsibleBox.cpp  CollabsibleBox.h  GuiManager.cpp  GuiManager.h  InitialConditionsBox.cpp  InitialConditionsBox.h  ItemPropertiesBox.cpp  ItemPropertiesBox.h  MenuBar.h  TextEditStreamBuffer.h  Timeline.cpp  Timeline.h  TimelineRuler.cpp  TimelineRuler.h  UI_Config.h  Viewport3D.h  application.h  main.cpp  mainwindow.cpp  mainwindow.h  simulationcontroller.cpp  simulationcontroller.cpp.autosave  simulationcontroller.h  viewport3d.cpp
BoltzmannFluids_UI/Models/: UnitCube.fbx  UnitCylinder.fbx  UnitSphere.fbx
BoltzmannFluids_UI/Source/: main.cpp
BoltzmannFluids_UI/Source/3D/: Viewport3D.cpp  Viewport3D.h
BoltzmannFluids_UI/Source/GLSL/: flatcolor.frag  texcoord_pattern.frag
BoltzmannFluids_UI/Source/GUI/: AddItemsBox.cpp  AddItemsBox.h  InitialConditionsBox.cpp  ItemPropertiesBox.cpp  SmartDoubleSpinBox.cpp  SmartDoubleSpinBox.h  TextEditStreamBuffer.h  Timeline.cpp  TimelineRuler.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
BoltzmannFluids_UI/Source/GUIApplication/: Application.cpp  Application.h  ProgramSourcePaths.cpp  ProgramSourcePaths.h  SimulationController.cpp
GraphicsCortex/: .gitignore
GraphicsCortex/Dependencies/assimp/lib/: zlibstatic.lib
GraphicsCortex/Dependencies/assimp/lib_debug/: zlibstaticd.lib
GraphicsCortex/Source/Graphics/Windowing/: Window.cpp
Mains/: lbm2d_main.cpp  lbm_main.cpp  marching_cubes_main.cpp
Source/Application/: ProgramSourcePaths.cpp  ProgramSourcePaths.h
Source/Demos/: LBMDemo2D.cpp  LBMDemo3D.cpp  LBMDemo3D.h
Source/GLSL/LBM/: collide.comp  collide_with_precomputed_velocity.comp  copy_population.comp  set_equilibrium_populations.comp  set_equilibrium_populations_thermal.comp  stream.comp  stream_thermal.comp
Source/GLSL/LBM2D/: add_random_population.comp  add_random_velocity.comp  advect.comp  boundry_condition.comp  boundry_condition_thermal.comp  collide.comp  collide_thermal.comp  collide_with_precomputed_velocity.comp  copy_boundries.comp  copy_curl.comp  copy_density.comp  copy_force_total.comp  copy_population.comp  copy_temperature.comp  copy_velocity_magnitude.comp  copy_velocity_total.comp  set_equilibrium_populations.comp  set_equilibrium_populations_thermal.comp  set_population.comp  set_velocity.comp  stream.comp  stream_thermal.comp
Source/GLSL/MarchingCubes/: marching_cubes.comp
Source/GLSL/Renderer2D/: density_2d.frag  forces_2d.frag  temperature_2d.frag
Source/GLSL/Renderer3D/: boundries_volumetric.frag  density_volumetric.frag  forces_volumetric.frag  temperature_volumetric.frag  velocity_volumetric.frag  volumetric.frag
Source/GUI/: CMakeLists.txt  CollabsibleBox.cpp  CollabsibleBox.h  GuiManager.cpp  GuiManager.h  InitialConditionsBox.cpp  InitialConditionsBox.h  LBMWrapper.cpp  LBMWrapper.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RightSidePanel.cpp  RightSidePanel.h  Timeline.cpp  Timeline.h  TimelineRuler.cpp  TimelineRuler.h  UI_Config.h  main.cpp  mainwindow.cpp
Source/GUI/qt_resources/: qt_resources.qrc
Source/GUI/resources/: resources.qrc
Source/Kernels/: handle_error.h
Source/Kernels/LBM2D/: lbm2d_kernels.cu  lbm2d_kernels.cuh
Source/LBM/: LBM.cpp  LBM.h
Source/LBM2D/: LBM2D.cpp  LBM2D.h
Source/LBMConstants/: FloatingPointAccuracy.cpp  FloatingPointAccuracy.h  LBMParams.cpp  LBMParams.cuh  VelocitySet.cpp  VelocitySet.h
Source/MarchingCubes/: MarchingCubes.h
